ADD: Logica de programacion reactiva

--- a/src/app/layouts/dashboard/dashboard.component.html
+++ b/src/app/layouts/dashboard/dashboard.component.html
@@ -19,7 +19,7 @@
       >
         <mat-icon>menu</mat-icon>
       </button>
-      <span>ABM Estudiantes</span>
+      <p appCustomDirective>ABM Estudiantes</p>
     </mat-toolbar>
     <main style="padding: 1rem">
       <app-students></app-students>
