--- a/src/app/layouts/dashboard/pages/students/students.component.html
+++ b/src/app/layouts/dashboard/pages/students/students.component.html
@@ -18,7 +18,10 @@
   <!-- firstName Column -->
   <ng-container matColumnDef="firstName">
     <th mat-header-cell *matHeaderCellDef>Nombre</th>
-    <td mat-cell *matCellDef="let element">{{ element.firstName }}</td>
+    <!-- ME DIFICULTO REALIZAR EL PIPE PARA UNIR LOS NOMBRES -->
+    <td mat-cell *matCellDef="let element">
+      {{ element.firstName | customPipes : "element.lastName" }}
+    </td>
   </ng-container>
 
   <!-- lastName Column -->
@@ -50,6 +53,22 @@
     <th mat-header-cell *matHeaderCellDef>Fecha Creacion</th>
     <td mat-cell *matCellDef="let element">{{ element.createdAt | date }}</td>
   </ng-container>
+
+  <!-- manage Column -->
+  <ng-container matColumnDef="manage">
+    <th mat-header-cell *matHeaderCellDef>Administrar Estudiante</th>
+    <td mat-cell *matCellDef="let element">
+      <button (click)="openDialog(element)" mat-icon-button>
+        <mat-icon>edit</mat-icon>
+      </button>
+      <button (click)="removeStudent(element.id)" mat-icon-button>
+        <mat-icon>person_remove</mat-icon>
+      </button>
+    </td>
+  </ng-container>
+
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
+
+<!-- <pre> {{ students | async | json}}</pre> -->
